# finance-stress-simulator

./: .gitignore  README.md  SETUP.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  test_quick.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  health.py  simulate.py  snapshots.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/domain/: __init__.py  levers.py  scenarios.py  simulator.py
backend/app/models/: __init__.py  run.py  snapshot.py
backend/app/services/: __init__.py  col_client.py
backend/app/tests/: __init__.py  test_simulator.py
backend/data/: col_fallback.json
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
