[tool.poetry]
name = "finance-stress-simulator"
version = "0.1.0"
description = "Financial stress simulator with scenario modeling and actionable insights"
authors = ["Pelz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "^0.0.14"
psycopg = {extras = ["binary"], version = "^3.1.18"}
httpx = "^0.26.0"
python-dotenv = "^1.0.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
ruff = "^0.1.14"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
